--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-paper": "^5.6.0",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0"
+    "react-native-screens": "~3.20.0",
+    "react-native-sse": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@tsconfig/react-native": "^2.0.3",
     "@types/jest": "^29.5.0",
     "@types/react": "^18.0.33",
+    "@types/react-native": "^0.71.5",
     "@types/react-test-renderer": "^18.0.0",
     "typescript": "^4.9.5"
   },
